# momahub.py

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  GEMINI.md  README.md  USER-GUIDE-gwg.md  USER-GUIDE.md  conftest.py  pyproject.toml  setup-momahub.py  setup-momahub.sh  translations_20260307_1251.html  translations_20260307_1310.html  translations_20260307_1311.html  translations_20260307_1316.html
.claude/: settings.local.json
cookbook/: README.md  analyze_logs.py  cookbook-20260308_125555.html  cookbook-20260308_134621.html  cookbook-20260308_161355.html  cookbook_catalog.json  run_all.py  run_cookbook.sh
cookbook/01_single_node_hello/: hello.spl
cookbook/02_multi_cte_parallel/: multi_cte.spl
cookbook/03_batch_translate/: translate.py  translations_20260307_1251.html  translations_20260307_1303.html  translations_20260307_1310.html  translations_20260307_1311.html  translations_20260307_1316.html  translations_20260307_2316.html  translations_20260307_2336.html  translations_20260307_2357.html  translations_20260307_2358.html  translations_20260307_2359.html  translations_20260308_0008.html  translations_20260308_0011.html  translations_20260308_1217.html
cookbook/03_two_hub_cluster/: setup.py  setup.sh
cookbook/04_benchmark_models/: benchmark.py
cookbook/05_rag_on_grid/: rag_query.spl
cookbook/06_arxiv_paper_digest/: digest.py  digest_20260308_1218.html  urls_example.txt
cookbook/07_stress_test/: prompts.txt  results-20260308-001801.md  results-20260308-002132.md  results-20260308-003140.md  results-20260308-005253.md  results-20260308-005312.md  results-20260308-121833.md  stress.py
cookbook/08_model_arena/: arena.py  arena_20260307_2233.html  arena_20260308_0013.html  arena_20260308_0030.html  arena_20260308_1218.html
cookbook/09_doc_pipeline/: pipeline.py  summary_20260308_1219.html
cookbook/10_chain_relay/: chain.py
cookbook/11_batch_translate/: translate.py
cookbook/12_tier_aware_dispatch/: tier_dispatch.py
cookbook/13_multi_agent_throughput/: throughput-run-122010-20260308-122122.json  throughput.py
cookbook/15_agent_failover/: failover.py
cookbook/16_math_olympiad/: math_olympiad.py
cookbook/17_code_review_pipeline/: code_review.py
cookbook/18_smart_router/: smart_router.py
cookbook/19_privacy_chunk_demo/: privacy_chunks.spl  privacy_demo.py
cookbook/20_overnight_batch/: overnight.py
cookbook/21_language_accessibility/: language_grid.py
cookbook/22_rewards_report/: rewards_20260307_1818.html  rewards_report.py
cookbook/23_wake_sleep_resilience/: resilience.py
cookbook/24_spl_compiler_pipeline/: compiler_demo.py  compiler_demo_20260308-122317.html
cookbook/25_model_diversity/: model_diversity.py
cookbook/26_code_guardian/: code_guardian.spl  guardian.py
cookbook/27_model_health/: model_health.py
cookbook/28_federated_search/: search.py
cookbook/29_model_fingerprinting/: model_fingerprinting.py
cookbook/30_academic_paper_pipeline/: academic_pipeline.py
cookbook/33_micro_learning/: learning.py
cookbook/34_junior_developer_assistant/: junior_dev_assistant.py
cookbook/80_fibonacci_seq/: fib_seq.py  readme.md
docs/: USER-GUIDE.md  claude-code-review.md  claude-implementation-plan.md  merit-resolution.md  ollama-models.md
docs/CHAT/: claude-20260302.md  claude-20260303.md
docs/DEV/: ROADMAP.md  VISION.md  claude-implementation-plan.md  deployment.md  protect-dos.md  re-implement.md
docs/REVIEW/: gemini-20260308.md
docs/chat-history/: claude-20260303.md
igrid/: __init__.py
igrid/agent/: __init__.py  hardware.py  llm.py  sse_consumer.py  telemetry.py  worker.py
igrid/cli/: __init__.py  config.py  main.py
igrid/extract/: __init__.py  pdf.py
igrid/format/: __init__.py  docx_writer.py  pdf_writer.py
igrid/hub/: __init__.py  app.py  cluster.py  db.py  dispatcher.py  hub_ddl.sql  monitor.py  rate_limit.py  state.py  verification.py
igrid/schema/: __init__.py  cluster.py  enums.py  handshake.py  pulse.py  reward.py  task.py
igrid/spl/: __init__.py  igrid_adapter.py  runner.py
scripts/: ollama-pull-momagrid.sh  pull_ollama.sh  setup-momahub.py  setup-momahub.sh
specs/: overview.md  spec-handshake.md  spec-moma-cli-v1.md  spec-pulse.md
(+27 files in other folders)
