[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momahub"
version = "0.2.2"
authors = [
  { name="Wen G. Gong", email="wen.gong.research@gmail.com" },
  { name="Digital Duck & Dog Team", email="wen.gong.research@gmail.com" },
]
description = "MoMaHub (i-grid): Hub-and-spoke distributed AI inference network."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "aiosqlite",
    "pydantic>=2.0",
    "typer",
    "requests",
    "httpx",
    "pyyaml",
    "pynvml",
    "streamlit",
    "streamlit-aggrid",
    "pandas",
    "dd-extract",
    "dd-format",
]

[project.optional-dependencies]
dev     = ["pytest", "pytest-asyncio", "httpx", "build", "twine"]
docling = ["dd-extract[docling]"]  # layout-aware PDF: tables, figures, multi-column

[project.urls]
"Homepage" = "https://github.com/digital-duck/momahub.py"
"Repository" = "https://github.com/digital-duck/momahub.py"
"Bug Tracker" = "https://github.com/digital-duck/momahub.py/issues"
"Documentation" = "https://github.com/digital-duck/momahub.py/blob/main/docs/USER-GUIDE.md"

[project.scripts]
moma = "igrid.cli.main:app"
moma-ui = "igrid.ui.launch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["igrid*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
